hphp/test/zend/good/Zend/tests/traits/error_008.php.expectf

Fatal error: foo cannot implement abc - it is not an interface in %s/error_008.php on line 5
